# webopen

./: LICENSE.txt  README.md  pyproject.toml  setup.py
src/webopen/: authentication.py  credentials.db  main.py  tempCodeRunnerFile.py
src/webopen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/webopen/db/: __init__.py  config.py  connection.py  models.py
tests/: note.py
