[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webopen"
version = "0.1.0"
authors = [
  { name="Bhuvaneshwar_Marri", email="bhuvaneshwarmarri@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BhuvaneshwarMarri/webopen"
Issues = "https://github.com/BhuvaneshwarMarri/webopen/issues"

[tool.hatch.dependencies]
argparse = "^1.4"

[tool.hatch.entry-points]
webopen = "webopen:main"

[tool.hatch.build.targets.wheel]
packages = ["src/webopen"]